add new route to add invite code to community
